# TouhouBot

./: .clang-tidy  .gitignore  CMakeLists.txt
include/: ConnectionGene.hh  Environment.hh  GlobalParameter.hh  Misc.hh  NeuralNetwork.hh  NodeGene.hh  TouhouBot.h
include/window_manager/X11/: X11Manager.h
source/: launch.cpp  main.cpp
source/window_manager/X11/: X11Manager.cpp
src/: NeuralNetwork.cpp  main.cpp  misc.cpp
